Fix minimal vertical alignment issue on icons wrapped by span element

--- a/frontend/src/components/dashboard/Operations/styles.scss
+++ b/frontend/src/components/dashboard/Operations/styles.scss
@@ -26,6 +26,9 @@
                 display: flex;
                 padding: 0px 0px 5px 0px;
             }
+            .copy-container {
+                display: flex;
+            }
         }
     }
     .actions {
