--- a/frontend/src/components/shared/MainMenu/styles.scss
+++ b/frontend/src/components/shared/MainMenu/styles.scss
@@ -26,6 +26,9 @@
         box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.05);
         cursor: pointer;
 
+        .icon {
+            display: flex;
+        }
         .item-name {
             flex-grow: 1;
             opacity: 0;
